--- a/puppy-tab.css
+++ b/puppy-tab.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     color: #011936;
-    background-color: #CCCCCC;
+    background-color: #E8E8E8;
     text-align: center;
 }
 
@@ -13,7 +13,8 @@ a {
     text-decoration: none;
 }
 
-/*navigation bar*/
+/*navigation bar
+breakpoint - 900px*/
 
 .nav-bar {
     background-color: #011936;
@@ -28,13 +29,12 @@ a {
 }
 
 .nav-bar h1 {
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
     flex-grow: 1;
     text-align: left;
     flex-basis: auto;
     position: relative;
-    left: 20px;
-    
+    left: 40px;
 }
 
 .quick-links {
@@ -43,7 +43,7 @@ a {
     flex-direction: row;
     flex-flow: nowrap;
     text-align: right;
-    margin: 20px;
+    margin: 40px;
     justify-content: flex-end;
     align-content: stretch;
     min-width: 700px;
@@ -51,7 +51,7 @@ a {
 
 .quick-links a {
     padding: .5em;
-    margin: .5em;
+    /*margin: .5em;*/
     border: 1px solid #FAFAFA;
     border-radius: 5px;
     position: relative;
@@ -60,32 +60,57 @@ a {
     flex-grow: 1;
 }
 
+.nav-tile {
+    margin: 10px;
+}
+
 /*pet cards*/
 
-.household {
-    display: inline-flex;
+.household-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 30px;
+    justify-content: space-between;
+    align-content: space-between;
+    padding: 40px;
+}
 
+#household-header {
+    font-size: 60px;
+    text-align: left;
+    margin: 75px 10px 0px 40px;
 }
 
 .pet-card {
     display: inline-flex;
+    background-color: #FAFAFA;
     border: 2px solid #011936;
     border-radius: 25px;
     padding: 20px;
-    margin: 15px;
     align-items: center;
     flex-direction: column;
     flex-basis: auto;
-    min-height: 650px;
-    min-width:  650px;
+    min-height: 500px;
+    min-width: 400px;
+    box-sizing: border-box;
 }
 
 table, tbody, th, tr, td {
-    font-size: 35px;
+    font-size: 30px;
     font-family: 'Roboto Condensed', sans-serif;
     color: #011936;
+    /*
     border: 1px solid #011936;
+    */
     padding: 10px;
+}
+
+th {
+    text-align: left;
+}
+
+td {
+    text-align: left;
 }
 
 table caption {
@@ -96,16 +121,33 @@ table caption {
 
 .pet-picture {
     object-fit: contain;
-    height: 135px;
+    height: 200px;
+    width: auto;
+}
+
+.kisuke-picture {
+    object-fit: contain;
+    height: 120px;
     width: auto;
 }
 
 .pet-picture-frame {
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 150px;
     border-radius: 100%;
     overflow: hidden;
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+footer {
+    height: 60px;
+    background-color: #011936;
+    color: #6BA292;
+    text-align: left;
+}
+
+footer p {
+    padding: 10px;
 }
